feat: move camera to an android fragment embedded in react-native